y.output
Grammar

    0 $accept: lines $end

    1 lines: lines line
    2      | line

    3 line: expr CR

    4 expr: expr ADD num
    5     | num

    6 num: NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <num> (258) 6
    ADD (259) 4
    CR (260) 3


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    lines (7)
        on left: 1 2
        on right: 0 1
    line (8)
        on left: 3
        on right: 1 2
    expr <num> (9)
        on left: 4 5
        on right: 3 4
    num <num> (10)
        on left: 6
        on right: 4 5


State 0

    0 $accept: • lines $end

    NUMBER  shift, and go to state 1

    lines  go to state 2
    line   go to state 3
    expr   go to state 4
    num    go to state 5


State 1

    6 num: NUMBER •

    $default  reduce using rule 6 (num)


State 2

    0 $accept: lines • $end
    1 lines: lines • line

    $end    shift, and go to state 6
    NUMBER  shift, and go to state 1

    line  go to state 7
    expr  go to state 4
    num   go to state 5


State 3

    2 lines: line •

    $default  reduce using rule 2 (lines)


State 4

    3 line: expr • CR
    4 expr: expr • ADD num

    ADD  shift, and go to state 8
    CR   shift, and go to state 9


State 5

    5 expr: num •

    $default  reduce using rule 5 (expr)


State 6

    0 $accept: lines $end •

    $default  accept


State 7

    1 lines: lines line •

    $default  reduce using rule 1 (lines)


State 8

    4 expr: expr ADD • num

    NUMBER  shift, and go to state 1

    num  go to state 10


State 9

    3 line: expr CR •

    $default  reduce using rule 3 (line)


State 10

    4 expr: expr ADD num •

    $default  reduce using rule 4 (expr)
